# mmap_shared_circular_buffers

./: CMakeLists.txt  LICENSE  Makefile  README.md  circular_buffer.c  circular_buffer.h
.github/workflows/: .ci.yml
apps/: CMakeLists.txt  slave.c
include/cb/: circular_buffer.h
master/: main.c
slave/: main.c
src/: CMakeLists.txt
src/cb/: CMakeLists.txt  circular_buffer.c
